--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,3 +29,18 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.btn-orange {
+    background-color: #fd7e14; /* naranja bootstrap */
+    color: #fff;
+    border: none;
+}
+
+    .btn-orange:hover {
+        background-color: #e96b0c;
+        color: #fff;
+    }
+
+.bg-orange {
+    background: linear-gradient(135deg, #fd7e14, #f76707);
+}
